[package]
edition = "2021"
license = "GPL-3.0-or-later"
name = "hakukone"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = {version = "1.0", features = ["backtrace"]}
clap = {version = "4", features = ["derive"]}
env_logger = "0.11"
float-ord = "0.3"
fslock = "0.2"
libc = "0.2"
lockfree-object-pool = "0.1.6"
log = "0.4"
mmap-rs = "0.6"
rayon = "1"
# Awaiting release of https://github.com/rust-rocksdb/rust-rocksdb/pull/868
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", rev = "1cf906dc4087f06631820f13855e6b27bd21b972" }
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
simsimd = "4"
tempfile = "3"
thiserror = "1"
tokio = "1"
voikko-rs = "1"
